The 6 version of task_1_1_2